# hsirc

./: .gitignore  .travis.yml  LICENSE  README.md  Setup.lhs  flake.nix  irc.cabal
Network/: IRC.hs  IRC.lhs
Network/IRC/: Base.hs  Client.hs  Commands.hs  Datatypes.hs  Monad.hs  Parser.hs  Parser.lhs  Types.hs
tests/: Main.hs  Makefile  QC.hs  Tests.hs
