Name:                   irc
Version:                0.1
License:                LGPL
License-File:           COPYING
Author:                 Trevor Elliott
Maintainer:             trevor@geekgateway.com
Extra-source-files:     COPYING.LESSER
Build-depends:          base, mtl, parsec >= 2.0
Exposed-Modules:        Network.IRC
ghc-options:            -fglasgow-exts
